# SCENE-MIND-AI

./: .gitignore  README.md  docker-compose.yml
ai/: .env.example  Dockerfile  pyproject.toml  requirements.txt
ai/app/: main.py  routes.py
ai/app/memory/: vector_store.py
ai/app/models/: schemas.py
ai/app/services/: analysis.py  continuity.py  generation.py
backend/: .env.example  Dockerfile
backend/app/Enums/: Role.php
backend/app/Models/: Character.php  ContinuityAlert.php  Project.php  Screenplay.php  ScreenplayVersion.php  User.php
backend/config/: services.php
backend/database/migrations/: 2026_01_01_000000_create_users_table.php  2026_01_01_000100_create_projects_table.php  2026_05_15_100000_create_screenplays_table.php  2026_05_15_100100_create_characters_table.php  2026_05_15_100200_create_continuity_alerts_table.php  2026_05_15_100300_create_screenplay_versions_table.php
backend/routes/: api.php
frontend/: .env.example  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/dashboard/: error.tsx  page.tsx
frontend/components/: CommandPalette.tsx
frontend/components/editor/: AIPanel.tsx  AnalyticsPanel.tsx  ContinuityPanel.tsx  EditorToolbar.tsx  ScreenplayBlock.tsx  ScreenplayEditor.tsx  (+1 more)
frontend/hooks/: useAI.ts  useAutoSave.ts  useContinuity.ts  useProjects.ts  useScreenplayFormat.ts
frontend/lib/: api.ts  export.ts
frontend/store/: useAppStore.ts  useAuthStore.ts  useEditorStore.ts
frontend/styles/: globals.css
(+18 files in other folders)
