[project]
name = "scenemind-ai-ai"
version = "0.1.0"
description = "FastAPI AI microservice for screenplay generation and analysis."
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.111.0"
"uvicorn[standard]" = "^0.23.0"
pydantic = "^2.13.4"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.0"

[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8001"
